# unitedassistant

./: .dockerignore  .replit  ALL_GPTs_CONVERSATIONAL_GUIDE.md  CHATBOT_INTEGRATION_SUMMARY.md  CHATBOT_SYSTEM_GUIDE.md  CONVERSATION_SOLUTION.md  DEPLOYMENT_GUIDE.md  GPT_CONVERSATIONAL_CHAT_STATUS.md  GPT_MEMORY_ISOLATION_FIX.md  HUGGINGFACE_DEPLOYMENT_FIX.md  IMMEDIATE_FIX_STEPS.md  LANGCHAIN_IMPLEMENTATION_GUIDE.md  LOCAL_SETUP_GUIDE.md  MVP_TESTING_GUIDE.md  New Text Document.txt  PROFESSIONAL_FIX_GUIDE.md  QUICK_START_GPT_ISOLATION.md  README.md  SUPABASE_DEPLOYMENT_GUIDE.md  SYSTEM_OVERVIEW.md  WEB_TESTING_GUIDE.md  alembic.ini  app.py  auth.py  clear_user_sessions.py  config.py  database.py  dependencies.py  direct_gpt_chat.py  fix_connection.py  huggingface_secrets_template.txt  huggingface_spaces_config.py  main.py  models.py  pyproject.toml  quick_start.py  replit.md  requirements.txt  run_and_test_chatbot.py  schemas.py  (+16 more)
alembic/: env.py
attached_assets/: Pasted-Great-You-re-building-only-the-backend-of-the-Unified-Assistant-in-Python-that-s-totally-doable--1753082855714_1753082855717.txt
huggingface_deployment/: DEPLOYMENT_GUIDE.md  Dockerfile  SUPABASE_SETUP.md  base.py  database.py  dependencies.py  env_template.txt  main.py  models.py  requirements.txt
routers/: assistant.py  auth.py  exports.py  huggingface.py  phases.py  projects.py
services/: ai_service_manager.py  chatbot_service.py  conversation_service.py  export_service.py  huggingface_service.py  langchain_conversation_service.py  openai_service.py  rag_service.py
tasks/: celery_app.py
(+61 files in other folders)
